--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@ body {
     font-family: "Hiragino Kaku Gothic Pro", Osaka, "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
     display: inline-block;
     font-size: 1.7rem;
-    padding: calc(100vh / 4) 2rem;
-/*     line-height: 100vh; */
+    padding: 0 2rem;
   }
 
 .ticker-wrap h3 {
